v2.11.0/_sources/plugins/wireless_profiles_id_site_tags_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.wireless_profiles_id_site_tags module -- Resource module for Wireless Profiles Id Site Tags
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.11.0).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.wireless_profiles_id_site_tags`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 2.0.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operations update and delete of the resource Wireless Profiles Id Site Tags. - \> This endpoint enables the deletion of a specific \`Site Tag\` associated with a given \`Wireless Profile\`. This API requires the \`id\` of the \`Wireless Profile\` and the \`siteTagId\` of the \`Site Tag\` to be provided as path parameters. - \> This endpoint allows updating the details of a specific Site Tag associated with a given Wireless Profile. The \`id\` of the Wireless Profile and the \`siteTagId\` of the Site Tag must be provided as path parameters, and the request body should contain the updated Site Tag details. The \`siteTagName\` cannot be modified through this endpoint. \`Note \` When updating a Site Tag, if the siteId already has an associated siteTag and the same siteId is included in the update request, the existing siteTag for that siteId will be overridden by the new one. For Flex-enabled Wireless Profiles i.e., a Wireless Profile with one or more Flex SSIDs , a non-default Flex Profile Name flexProfileName will be used. If no custom flexProfileName is provided, the System will automatically generate one and configure it in the controller.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.2.3.0.0
- python \>= 3.12






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-apProfileName"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-approfilename:

      .. rst-class:: ansible-option-title

      **apProfileName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-apProfileName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Wireless Profiles Id Site Tags's apProfileName.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-catalystcenter_debug:
      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_debug`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-catalystcenter_host:
      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_host`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-catalystcenter_password:
      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_password`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-catalystcenter_api_port:
      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-catalystcenter_port:
      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_port, catalystcenter_api_port`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-catalystcenter_username:
      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-dnac_username:
      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-user:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_username, user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-catalystcenter_verify:
      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_verify`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-catalystcenter_version:
      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_version`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.6.0"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-flexProfileName"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-flexprofilename:

      .. rst-class:: ansible-option-title

      **flexProfileName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-flexProfileName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Wireless Profiles Id Site Tags's flexProfileName.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id path parameter. Wireless Profile ID.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-load"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-load:

      .. rst-class:: ansible-option-title

      **load**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-load" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Configure a \`load\` factor for this Site Tag. - The load factor is defined on a scale of 0 to 1000. As a starting point, you can set the load factor to match the number of APs, with adjustments made for any unusual or exceptional client loads. - This feature is supported in IOS-XE versions 17.9.3 and above. - The default \`load\` value is null. Leaving it as \`null\` does not reset the controller's existing value; any previously configured \`load\` value remains unchanged on the controller. - All APs on controller must disconnect and reconnect for load balancing to take effect. - Examples - Custom Load - \`load\` is set to 10. - After provisioning, the \`load\` value (10) is pushed to the controller for the Site Tag. - Out Of Band (OOB) Load - For a Site Tag, \`load\` is configured as 10 directly on controller (Out-Of-Band). - No \`load\` value is set through this API, upon provisioning no value will be pushed to the controller. - The existing \`load\` value (10) for the Site Tag is retained on the controller. - Reset Load - \`load\` is configured as 10 within the Site Tag and successfully provisioned to the controller. - \`load\` is reset to null in the design via \`PUT\` API. - During provisioning, no value is pushed to the controller, and the previous \`load\` value (10) for the Site Tag is retained on controller. - Load configuration for indexed Site Tags - Assign the load value relative to AP count or other load factors like client density for the Site Tag. - Flex Site Tag - Can support up to 300 APs. - If \`load\` is configured as 1000 and 600 AP's are provisioned, Catalyst Centre will automatically create 2 indexed Site Tags, each with Load = 1000. - Non Flex Site Tag - Can support up to 1600 APs. - If \`load\` is configured as 1000 and 2000 AP's are provisioned, the system will automatically create 2 indexed Site Tags, each with Load = 1000.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-siteIds"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-siteids:

      .. rst-class:: ansible-option-title

      **siteIds**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-siteIds" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Wireless Profiles Id Site Tags's siteIds.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-siteTagId"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-sitetagid:

      .. rst-class:: ansible-option-title

      **siteTagId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-siteTagId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Wireless Profiles Id Site Tags's siteTagId.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-siteTagName"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-sitetagname:

      .. rst-class:: ansible-option-title

      **siteTagName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-siteTagName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Use English letters, numbers, special characters except \<, /, '.\*', ? and leading/trailing space.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are wireless.Wireless.delete\_a\_specific\_site\_tag\_from\_a\_wireless\_profile, wireless.Wireless.update\_a\_specific\_site\_tag\_for\_a\_wireless\_profile,
   - Paths used are delete /dna/intent/api/v1/wirelessProfiles/{id}/siteTags/{siteTagId}, put /dna/intent/api/v1/wirelessProfiles/{id}/siteTags/{siteTagId},
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK
   - Requires Python \>= 3.10, matching the controller Python versions supported by the collection's minimum ansible-core version (see the collection README for the current ansible-core / Python compatibility range)

.. Seealso

See Also
--------

.. seealso::

   `Cisco Catalyst Center documentation for Wireless DeleteASpecificSiteTagFromAWirelessProfile <https://developer.cisco.com/docs/dna-center/#!delete-a-specific-site-tag-from-a-wireless-profile>`_
       Complete reference of the DeleteASpecificSiteTagFromAWirelessProfile API.
   `Cisco Catalyst Center documentation for Wireless UpdateASpecificSiteTagForAWirelessProfile <https://developer.cisco.com/docs/dna-center/#!update-a-specific-site-tag-for-a-wireless-profile>`_
       Complete reference of the UpdateASpecificSiteTagForAWirelessProfile API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Update by id
      cisco.catalystcenter.wireless_profiles_id_site_tags:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        state: present
        apProfileName: string
        flexProfileName: string
        id: string
        load: {}
        siteIds:
          - string
        siteTagId: string
        siteTagName: string
    - name: Delete by id
      cisco.catalystcenter.wireless_profiles_id_site_tags:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        state: absent
        id: string
        siteTagId: string




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-catalystcenter_response"></div>

      .. _ansible_collections.cisco.catalystcenter.wireless_profiles_id_site_tags_module__return-catalystcenter_response:

      .. rst-class:: ansible-option-title

      **catalystcenter_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-catalystcenter_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"taskId": "string", "url": "string"}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Bryan Vargas (@bvargasre)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

